Fix pricing heading z-index

--- a/LESS/home.less
+++ b/LESS/home.less
@@ -180,6 +180,7 @@ section {
     padding-bottom: 200px;
     h2 {
         z-index: 3;
+        position: relative;
     }
     .row {
         margin-top: 75px;
